Context aware with in memory cache for user session