@@ -11,7 +11,6 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 /**
  * Integration test for Azure Spring App Log Service
- *
  * Note: Requires Azure Monitor to be configured in application.yml
  * Run with: mvn test -Dtest=AzureSpringAppLogServiceIT
  */
@@ -31,7 +30,7 @@ public class AzureSpringAppLogServiceIT {
     public void testGetExceptionsToday() {
         log.info("Testing exception retrieval from Azure...");
 
-        StepVerifier.create(azureSpringAppLogService.getAppLogs(null, 10))
+        StepVerifier.create(azureSpringAppLogService.getAppLogs(null, 10, "test"))
                 .assertNext(result -> {
                     assertNotNull(result);
                     log.info("Query result: Total exceptions={}, Apps={}",
@@ -40,7 +39,7 @@ public class AzureSpringAppLogServiceIT {
                     log.info("Count by app: {}", result.getCountByApp());
 
                     if (result.getLatestExceptions() != null && !result.getLatestExceptions().isEmpty()) {
-                        log.info("Latest exception: {}", result.getLatestExceptions().get(0));
+                        log.info("Latest exception: {}", result.getLatestExceptions().getFirst());
                     }
                 })
                 .verifyComplete();
@@ -53,7 +52,7 @@ public class AzureSpringAppLogServiceIT {
     public void testGetExceptionsByAppName() {
         log.info("Testing exception retrieval filtered by app name...");
 
-        StepVerifier.create(azureSpringAppLogService.getAppLogs("my-app", 5))
+        StepVerifier.create(azureSpringAppLogService.getAppLogs("my-app", 5, "test"))
                 .assertNext(result -> {
                     assertNotNull(result);
                     log.info("Filtered results for app 'my-app': {}", result.getTotalCount());
@@ -68,7 +67,7 @@ public class AzureSpringAppLogServiceIT {
     public void testGetExceptionsWithLimit() {
         log.info("Testing exception retrieval with custom limit...");
 
-        StepVerifier.create(azureSpringAppLogService.getAppLogs(null, 20))
+        StepVerifier.create(azureSpringAppLogService.getAppLogs(null, 20, "test"))
                 .assertNext(result -> {
                     assertNotNull(result);
                     assert result.getLatestExceptions().size() <= 20;
